# domain-design

./: CMakeLists.txt  README.md  main.cpp  test.cpp  testWarehouse.cpp
src/: employee.cpp  pallet.cpp  shelf.cpp  warehouse.cpp
src/include/: IContainer.hpp  employee.hpp  pallet.hpp  shelf.hpp  warehouse.hpp
test/: test.cpp  testWarehouse.cpp
